--- a/coding.html
+++ b/coding.html
@@ -60,14 +60,14 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-home-custom text-center" href="/">Home<span
-                                class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home-custom text-center" href="/">Home</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
                     </li>
                     <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-coding-custom text-center" href="#">Coding Projects</a>
+                        <a class="nav-link nav-coding-custom text-center" href="#">Coding Projects<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-writing-custom text-center" href="/writing.html">Writing Samples</a>
