--- a/resume.html
+++ b/resume.html
@@ -60,11 +60,11 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-home-custom text-center" href="/">Home<span
-                                class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home-custom text-center" href="/">Home</a>
                     </li>
                     <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-resume-custom text-center" href="#">Résumé</a>
+                        <a class="nav-link nav-resume-custom text-center" href="#">Résumé<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
