--- a/writing.html
+++ b/writing.html
@@ -54,8 +54,7 @@
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link nav-home-custom text-center" href="/">Home<span
-                                class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home-custom text-center" href="/">Home</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-resume-custom text-center" href="/resume.html">Résumé</a>
@@ -64,7 +63,8 @@
                         <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
                     </li>
                     <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-writing-custom text-center" href="#">Writing Samples</a>
+                        <a class="nav-link nav-writing-custom text-center" href="#">Writing Samples<span
+                                class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
