Updated privacy.html and README.md to reflect Clicky.
I'm thinking I'm actually going to keep both Clicky and Plausible in the long-term, or at least not too short of a term. Reflected this in privacy.html and README.md .Also reformatted the Clicky and Plausible script tags in each html file to be a little bit cleaner visually while coding.

--- a/privacy.html
+++ b/privacy.html
@@ -35,11 +35,11 @@
     <!-- navbar item text on left for mobile format script -->
     <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
 
-    <!-- Clicky view counter script -->
-    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
-
-    <!-- Plausible view counter script -->
+    <!-- Plausible Analytics script -->
     <script defer data-domain="psmit.dev" src="https://plausible.io/js/script.js"></script>
+
+    <!-- Clicky Website Analytics script -->
+    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
@@ -144,8 +144,9 @@
                     nothing is sent back to me (Pete Smith) in any way.
                 </li>
             </ul>
-            Other than what has already been stated on this page, the code I have written does not process, store,
-            or use any user data in any way and does not use otherwise cookies. However, this
+            Other than what has already been stated on this page, the code I have written for this site does not
+            process, store,
+            or otherwise use any user data in any way and does not otherwise use cookies. However, this
             site makes use of various third party
             software that may do so. The following are short summaries of relevant privacy statements and
             links to their respective privacy policies, where applicable:</p>
@@ -219,7 +220,7 @@
                         </li>
                         <li>Note: Octokit.js is maintained by GitHub and is GitHub's official way of interacting with
                             their
-                            REST API.</li>
+                            REST API</li>
                     </ul>
                 </li>
                 <li><a href="https://plausible.io/">Plausible Analytics</a>
@@ -238,6 +239,41 @@
                                     allows for site administrators to track data such as view counts and city-level
                                     location data</li>
                                 <li>Plausible does not use cookies</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="https://clicky.com/">Clicky Website Analytics</a>
+                    <ul>
+                        <li>Clicky's full privacy policy is available at <a
+                                href="https://clicky.com/terms/privacy">clicky.com/<wbr>terms/<wbr>privacy</a></li>
+                        <li>Clicky is a privacy-friendly alternative to Google Analytics
+                            <ul>
+                                <li>Clicky is compliant with GDPR</li>
+                                <li>Clicky collects, processes, and stores limited, non-identifiable information that
+                                    allows for site administrators to track various statistics such as the number of
+                                    unique visitors and total page views</li>
+                                <li>You can opt out of Clicky's tracking for all sites that use the service by visiting
+                                    <a href="https://clicky.com/optout">clicky.com/<wbr>optout</a> and following the
+                                    instructions at the bottom of the page
+                                    <ul>
+                                        <li>This uses a cookie that is valid for 1 year, which is necessary in order for
+                                            site's using Clicky to recognize your preference</li>
+                                        <li>This preference can be overridden by sites that use Clicky for security and
+                                            fraud prevention purposes, however this site does not use Clicky for any
+                                            such purposes, therefore, if you opt out of tracking, this site will honor
+                                            your preference</li>
+                                    </ul>
+                                </li>
+                                <li>Clicky may use cookies if privacy settings are disabled or if their is a user
+                                    consent system in place
+                                    <ul>
+                                        <li>Privacy settings are enabled for all users viewing this site and there is no
+                                            consent system currently in place on this site, therefore cookies are not
+                                            used by Clicky for this site</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
@@ -248,7 +284,7 @@
             </ul>
 
             <hr />
-            <footer class="footer text-muted text-center" id="footer">
+            <footer class=" footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
                         href="/changelog.html">Changelog</a> | <a href="#">Privacy
