--- a/changelog.html
+++ b/changelog.html
@@ -38,11 +38,11 @@
     <!-- changelog/GitHub API script -->
     <script defer type="module" src="/assets/js/changelog.js"></script>
 
-    <!-- Clicky view counter script -->
-    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
-
-    <!-- Plausible view counter script -->
+    <!-- Plausible Analytics script -->
     <script defer data-domain="psmit.dev" src="https://plausible.io/js/script.js"></script>
+
+    <!-- Clicky Website Analytics script -->
+    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
