--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <!-- navbar item text on left for mobile format script -->
     <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
 
-    <!-- Clicky view counter script -->
-    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
-
-    <!-- Plausible view counter script -->
+    <!-- Plausible Analytics script -->
     <script defer data-domain="psmit.dev" src="https://plausible.io/js/script.js"></script>
+
+    <!-- Clicky Website Analytics script -->
+    <script async data-id="101425859" src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
