Added skeleton sitemap.html page. Modified footers to add sitemap link.
Also modified the comment before the dark mode preference deletion script tag on each page to be more accurate. I changed the script itself a while ago and forgot to update that comment. Also modified that script again so that it breaks out of the for loop upon successful cookie deletion. This would only have performance benefits if there are for some reason a huge amount of cookies (there should only ever be a max of 1 though), but I did it for consistency's sake I guess.

--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
     <!-- navbar scroll script -->
     <script defer src="/assets/js/navbar-scroll.js"></script>
 
-    <!-- delete all cookies script -->
+    <!-- delete dark mode cookie script -->
     <script defer src="/assets/js/delete-cookies.js"></script>
 
     <!-- navbar item text on left for mobile format script -->
@@ -257,11 +257,11 @@
             <hr />
 
             <footer class="footer text-muted text-center" id="footer">
-
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
-                        href="/changelog.html">Changelog</a> | <a href="/privacy.html">Privacy
-                        Notice</a></p>
+                <p><a href="/changelog.html">Changelog</a> | <a
+                        href="https://github.com/psmit703/personal-website">GitHub
+                        Repository</a></p>
+                <p><a href="/sitemap.html">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
