--- a/sitemap.html
+++ b/sitemap.html
@@ -2,13 +2,13 @@
 <html lang="en-US" dir="ltr">
 
 <head>
-    <title>Changelog | Pete Smith</title>
+    <title>Sitemap | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <meta name="description" content="Recent changes to my website">
+    <meta name="description" content="A visual sitemap for this website">
     <meta name="author" content="Pete Smith">
 
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://www.psmit.dev/changelog.html">
+    <link rel="canonical" href="https://www.psmit.dev/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -34,9 +34,6 @@
 
     <!-- navbar item text on left for mobile format script -->
     <script defer src="/assets/js/navbar-text-left-mobile.js"></script>
-
-    <!-- changelog/GitHub API script -->
-    <script defer type="module" src="/assets/js/changelog.js"></script>
 
     <!-- Plausible Analytics script -->
     <script defer data-domain="psmit.dev" src="https://plausible.io/js/script.js"></script>
@@ -83,32 +80,12 @@
 
         <div class="body-content-custom">
 
-            <h3 class="text-center">Click <a href="https://github.com/psmit703/personal-website/commits">here</a>
-                to see all changes</h3>
-
-            <hr />
-
-            <h3 class="text-center">10 most recent changes</h3>
-
-            <div class="commit-spacing"></div>
-
-            <h5 class="text-center"><i>Please note that while GitHub internally supports separate commit
-                    summaries
-                    and descriptions, their public API does not</i></h5>
-            <h5 class="text-center"><i>Therefore, if a commit description was provided, it will appear appended to the
-                    summary</i></h5>
-
-            <div class="commit-spacing"></div>
-
-            <div id="changelog-body">
-            </div>
-
             <hr />
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p><a href="#">Changelog</a> | <a href="https://github.com/psmit703/personal-website">GitHub
-                        Repository</a></p>
-                <p><a href="/sitemap.html">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
+                <p><a href="/changelog.html">Changelog</a> | <a
+                        href="https://github.com/psmit703/personal-website">GitHub Repository</a></p>
+                <p><a href="#">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
@@ -126,6 +103,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
 
 </html>
