--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- random image script -->
     <script defer src="/assets/js/random-image.js"></script>
 
-    <!-- delete all cookies script -->
+    <!-- delete dark mode cookie script -->
     <script defer src="/assets/js/delete-cookies.js"></script>
 
     <!-- navbar item text on left for mobile format script -->
@@ -233,8 +233,10 @@
             <hr />
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
-                <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
-                        href="/changelog.html">Changelog</a> | <a href="/privacy.html">Privacy Notice</a></p>
+                <p><a href="/changelog.html">Changelog</a> | <a
+                        href="https://github.com/psmit703/personal-website">GitHub
+                        Repository</a></p>
+                <p><a href="/sitemap.html">Sitemap</a> | <a href="/privacy.html">Privacy Notice</a></p>
                 <p id="delete-cookies-wrapper"><span id="delete-cookies">Reset Dark Mode Preference</span></p>
             </footer>
         </div>
