Commented HTML files, added HTML template page.

--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 
+<!-- if using this as a template for a new page, be sure to edit the following -->
+<!-- 1. head -->
+<!-- a. title -->
+<!-- b. description -->
+<!-- c. canonical link -->
+<!-- d. page-specific script tags -->
+<!-- 2. body -->
+<!-- a. navbar -->
+<!-- i. navbar links, including for the navbar title -->
+<!-- ii. active page -->
+<!-- iii. screen reader tags -->
+<!-- b. container -->
+<!-- i. should probably remove all container content, but use discretion -->
+<!-- c. footer -->
+<!-- i. footer links -->
+
 <head>
     <title>Changelog | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
@@ -46,20 +62,24 @@
 </head>
 
 <body>
+    <!-- dark mode toggle button -->
     <div id="dark-mode-btn">
         <input id="btn-circle" type="button"></input>
     </div>
 
+    <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="/">Pete Smith
             </a>
 
+            <!-- navbar toggle button - only visible in mobile format -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-options"
                 aria-controls="navbar-options" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+            <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2">
@@ -80,9 +100,8 @@
     </nav>
 
     <div class="container">
-
         <div class="body-content-custom">
-
+            <!-- link to all commits -->
             <h3 class="text-center">Click <a href="https://github.com/psmit703/personal-website/commits">here</a>
                 to see all changes</h3>
 
@@ -92,6 +111,7 @@
 
             <div class="commit-spacing"></div>
 
+            <!-- note regarding GitHub's commit message formatting -->
             <h5 class="text-center"><i>Please note that while GitHub internally supports separate commit
                     summaries
                     and descriptions, their public API does not</i></h5>
@@ -100,10 +120,14 @@
 
             <div class="commit-spacing"></div>
 
+            <!-- the contents of div id: "changelog-body" are populated by changelog.js -->
+            <!-- once loaded, contains Bootstrap cards with 10 most recent commits to the site's GitHub repo -->
             <div id="changelog-body">
             </div>
 
             <hr />
+
+            <!-- footer -->
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
@@ -112,7 +136,6 @@
             </footer>
         </div>
     </div>
-
 
     <!-- required for proper Bootstrap functionality -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -125,6 +148,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
 
 </html>
