--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 
+<!-- if using this as a template for a new page, be sure to edit the following -->
+<!-- 1. head -->
+<!-- a. title -->
+<!-- b. description -->
+<!-- c. canonical link -->
+<!-- d. page-specific script tags -->
+<!-- 2. body -->
+<!-- a. navbar -->
+<!-- i. navbar links, including for the navbar title -->
+<!-- ii. active page -->
+<!-- iii. screen reader tags -->
+<!-- b. container -->
+<!-- i. should probably remove all container content, but use discretion -->
+<!-- c. footer -->
+<!-- i. footer links -->
+
 <head>
     <title>Home | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
@@ -46,20 +62,24 @@
 </head>
 
 <body>
+    <!-- dark mode toggle button -->
     <div id="dark-mode-btn">
         <input id="btn-circle" type="button"></input>
     </div>
 
+    <!-- navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="#">Pete Smith
             </a>
 
+            <!-- navbar toggle button - only visible in mobile format -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-options"
                 aria-controls="navbar-options" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+            <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbar-options">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-2 active active-custom">
@@ -81,18 +101,20 @@
     </nav>
 
     <div class="container">
-
         <div class="body-content-custom">
-
-
-
             <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
             <div class="row">
+
+                <!-- div id: "img-parent" is hidden in mobile format -->
                 <div class="col-md" id="img-parent">
+
+                    <!-- background image of div id: "random-image" is selected by random-image.js -->
                     <img id="random-image" style="object-fit: cover; height: 425px; width: 425px;">
                 </div>
                 <div class="col-md">
+                    <!-- basic info about me -->
+
                     <p class="quick-facts-custom">
                         Some info about me:
 
@@ -128,6 +150,7 @@
 
             <hr />
 
+            <!-- SVGs of favorite languages -->
             <h4 class="text-center">My favorite languages</h4>
             <div class=" row langs-custom">
                 <div class="col-sm col-custom">
@@ -144,6 +167,7 @@
 
             <hr />
 
+            <!-- SVGs of languages I have used not listed in favorite languages section -->
             <h4 class="text-center">Other languages I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
@@ -172,6 +196,7 @@
 
             <hr />
 
+            <!-- SVGs of frameworks I have used -->
             <h4 class="text-center">Frameworks I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
@@ -190,12 +215,15 @@
 
             <hr />
 
+            <!-- various contact/profile links and related SVGs -->
             <div class="links-custom mx-5 my-5">
                 <h4>Want to contact me, see my professional profiles, or challenge me to a game of ping pong? Look
                     below!</h4>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm col-custom">
+                            <!-- email -->
+
                             <a href="mailto:psmit703@outlook.com">
                                 <svg xmlns="https://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                                     class="bi bi-envelope-at each-link-custom contactSVG" viewBox="0 0 16 16">
@@ -207,6 +235,8 @@
                             </a>
                         </div>
                         <div class="col-sm col-custom">
+                            <!-- GitHub -->
+
                             <a href="https://github.com/psmit703">
                                 <svg xmlns="https://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                                     class="bi bi-github each-link-custom contactSVG" viewBox="0 0 16 16">
@@ -216,6 +246,8 @@
                             </a>
                         </div>
                         <div class="col-sm col-custom">
+                            <!-- LinkedIn -->
+
                             <a href="https://www.linkedin.com/in/petesmith-umd/">
                                 <svg xmlns="https://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                                     class="bi bi-linkedin each-link-custom contactSVG" viewBox="0 0 16 16">
@@ -228,9 +260,9 @@
                 </div>
             </div>
 
-
-
             <hr />
+
+            <!-- footer -->
             <footer class="footer text-muted text-center" id="footer">
                 <p>&copy; 2023 Pete Smith | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a></p>
                 <p><a href="https://github.com/psmit703/personal-website">GitHub Repository</a> | <a
@@ -239,7 +271,6 @@
             </footer>
         </div>
     </div>
-
 
     <!-- required for proper Bootstrap functionality -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -252,6 +283,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
 
 </html>
