--- a/template.html
+++ b/template.html
@@ -18,13 +18,13 @@
 <!-- i. footer links -->
 
 <head>
-    <title>Writing | Pete Smith</title>
+    <title>TITLE | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <meta name="description" content="My Writing Samples">
+    <meta name="description" content="DESCRIPTION">
     <meta name="author" content="Pete Smith">
 
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://www.psmit.dev/writing.html">
+    <link rel="canonical" href="https://www.psmit.dev/SUBPAGE">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -88,9 +88,8 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link nav-coding-custom text-center" href="/coding.html">Coding Projects</a>
                     </li>
-                    <li class="nav-item mx-2 active active-custom">
-                        <a class="nav-link nav-writing-custom text-center" href="#">Writing Samples<span
-                                class="sr-only">(current)</span></a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link nav-writing-custom text-center" href="/writing.html">Writing Samples</a>
                     </li>
                 </ul>
             </div>
@@ -99,7 +98,7 @@
 
     <div class="container">
         <div class="body-content-custom">
-            <h1 class="text-center">Coming soon!</h1>
+            BODY CONTENT
 
             <hr />
 
