Removed duplicate word in sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -164,7 +164,7 @@
                     of each page</i></h5>
 
             <h5 class="text-center"><i>Pages listed under "Utility Pages" have no direct links to them on this site
-                    (apart from through this page) and are used as utilities for user user experience and
+                    (apart from through this page) and are used as utilities for user experience and site
                     development</i></h5>
 
             <hr />
